tests/ui/statics/uninhabited-static.stderr
error: static of uninhabited type
  --> $DIR/uninhabited-static.rs:9:1
   |
LL | static VOID2: Void = unsafe { std::mem::transmute(()) };
   | ^^^^^^^^^^^^^^^^^^
   |
   = note: uninhabited statics cannot be initialized, and any access would be an immediate error

error: static of uninhabited type
  --> $DIR/uninhabited-static.rs:12:1
   |
LL | static NEVER2: Void = unsafe { std::mem::transmute(()) };
   | ^^^^^^^^^^^^^^^^^^^
   |
   = note: uninhabited statics cannot be initialized, and any access would be an immediate error

error: static of uninhabited type
  --> $DIR/uninhabited-static.rs:5:5
   |
LL |     static VOID: Void;
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: uninhabited statics cannot be initialized, and any access would be an immediate error

error: static of uninhabited type
  --> $DIR/uninhabited-static.rs:6:5
   |
LL |     static NEVER: !;
   |     ^^^^^^^^^^^^^^^
   |
   = note: uninhabited statics cannot be initialized, and any access would be an immediate error

error[E0080]: constructing invalid value: encountered a value of uninhabited type `Void`
  --> $DIR/uninhabited-static.rs:9:31
   |
LL | static VOID2: Void = unsafe { std::mem::transmute(()) };
   |                               ^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `VOID2` failed here

error[E0080]: constructing invalid value: encountered a value of uninhabited type `Void`
  --> $DIR/uninhabited-static.rs:12:32
   |
LL | static NEVER2: Void = unsafe { std::mem::transmute(()) };
   |                                ^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `NEVER2` failed here

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0080`.
